[package]
name = "crypbitrage"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypbitrage"

[[bin]]
name="crypto"

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.138"
serde = { version = "1", features = ["derive"] }
